[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/telaPause.gd" type="Script" id=1]
[ext_resource path="res://Sprits/botoes/tela1.png" type="Texture" id=2]
[ext_resource path="res://Sprits/botoes/pausado.png" type="Texture" id=3]
[ext_resource path="res://Sprits/puxar1.png" type="Texture" id=4]
[ext_resource path="res://Sprits/puxar2.png" type="Texture" id=5]
[ext_resource path="res://Sprits/botoes/fechar.png" type="Texture" id=6]
[ext_resource path="res://Sprits/botoes/menu.png" type="Texture" id=7]
[ext_resource path="res://Sprits/botaoretangulo.png" type="Texture" id=8]
[ext_resource path="res://Sprits/botaoretangulo2.png" type="Texture" id=9]
[ext_resource path="res://Sprits/botoes/reiniciar.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Reiniciar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 572.745, 410.678 ), Vector2( 572.745, 965.494 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Reiniciar:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 39.6169, 38.063 ), Vector2( 39.6169, 38.063 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu/Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite 2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 458.641, 283.904 ), Vector2( 458.641, 838.72 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite 2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 366.544, 247.64 ), Vector2( 366.544, 802.456 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Retorna:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 830.624, 208.64 ), Vector2( 830.624, 763.456 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Retorna:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Retorna/Sprite:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 39.6169, 38.063 ), Vector2( 39.6169, 38.063 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Retorna/Sprite:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Menu:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 329.877, 208.64 ), Vector2( 329.877, 763.456 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Menu:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Reiniciar/Sprite:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 42.8031, 21.1212 ), Vector2( 42.8031, 21.1212 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Reiniciar/Sprite:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Reiniciar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 572.745, -137.289 ), Vector2( 572.745, 410.678 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Reiniciar:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 39.6169, 38.063 ), Vector2( 39.6169, 38.063 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu/Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite 2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 458.641, -264.063 ), Vector2( 458.641, 283.904 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite 2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 366.544, -300.327 ), Vector2( 366.544, 247.64 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Retorna:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 830.624, -339.327 ), Vector2( 830.624, 208.64 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Retorna:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Retorna/Sprite:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 39.6169, 38.063 ), Vector2( 39.6169, 38.063 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Retorna/Sprite:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Menu:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 329.877, -339.327 ), Vector2( 329.877, 208.64 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Menu:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Reiniciar/Sprite:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 42.8031, 21.1212 ), Vector2( 42.8031, 21.1212 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Reiniciar/Sprite:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[node name="telaPause" type="Node2D"]
pause_mode = 2
z_index = 20
script = ExtResource( 1 )

[node name="ColorFrame" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -18.0
margin_right = 1298.0
margin_bottom = 735.0
color = Color( 0, 0, 0, 0.470588 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 366.544, 247.64 )
scale = Vector2( 0.8, 0.6 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite 2" type="Sprite" parent="."]
position = Vector2( 458.641, 283.904 )
texture = ExtResource( 3 )
centered = false

[node name="Retorna" type="TouchScreenButton" parent="."]
position = Vector2( 830.624, 208.64 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Retorna"]
position = Vector2( 39.6169, 38.063 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

<<<<<<< HEAD
=======
[node name="TextureButton" type="TextureButton" parent="Retorna"]
margin_right = 77.0
margin_bottom = 84.0

>>>>>>> 9a1fcdfe5f1a8e1b4286da6267967861c8667c3e
[node name="Menu" type="TouchScreenButton" parent="."]
position = Vector2( 329.877, 208.64 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Menu"]
position = Vector2( 39.6169, 38.063 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )

[node name="Reiniciar" type="TouchScreenButton" parent="."]
position = Vector2( 572.745, 410.678 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 8 )
pressed = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Reiniciar"]
pause_mode = 2
position = Vector2( 42.8031, 21.1212 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 10 )

<<<<<<< HEAD
=======
[node name="TextureButton" type="TextureButton" parent="Reiniciar"]
margin_right = 87.0
margin_bottom = 40.0

>>>>>>> 9a1fcdfe5f1a8e1b4286da6267967861c8667c3e
[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "show"
anims/Hide = SubResource( 1 )
anims/show = SubResource( 2 )
<<<<<<< HEAD
[connection signal="pressed" from="Retorna" to="." method="_on_Retorna_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Reiniciar" to="." method="_on_Reiniciar_pressed"]
=======

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 329.456
margin_top = 208.693
margin_right = 452.456
margin_bottom = 321.693
[connection signal="pressed" from="Retorna" to="." method="_on_Retorna_pressed"]
[connection signal="pressed" from="Retorna/TextureButton" to="." method="_on_Retorna_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Reiniciar" to="." method="_on_Reiniciar_pressed"]
[connection signal="pressed" from="Reiniciar/TextureButton" to="." method="_on_Reiniciar_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_Menu_pressed"]
>>>>>>> 9a1fcdfe5f1a8e1b4286da6267967861c8667c3e
